--- a/app/src/main/res/layout/fragment_hourly_weather.xml
+++ b/app/src/main/res/layout/fragment_hourly_weather.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@drawable/bg_gradient">
+                android:id="@+id/hourlyWeatherLayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/bg_gradient"
+                android:orientation="vertical">
 
     <TextView
         android:id="@+id/todayLabel"
@@ -17,8 +18,8 @@
         android:textSize="30sp"/>
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/recyclerView" />
+        android:layout_height="match_parent"/>
 
 </RelativeLayout>
