--- a/app/src/main/res/layout/fragment_hourly_weather.xml
+++ b/app/src/main/res/layout/fragment_hourly_weather.xml
@@ -20,6 +20,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_below="@id/todayLabel"/>
 
 </RelativeLayout>
