--- a/app/src/main/res/layout/fragment_daily_weather.xml
+++ b/app/src/main/res/layout/fragment_daily_weather.xml
@@ -36,7 +36,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
-        android:text="This Week&apos;s Weather"
+        android:text="Weekly Weather"
         android:textColor="#ffffffff"
         android:textSize="30sp"/>
 
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="20dp"
         android:text="Alcatraz Island, CA"
         android:textColor="#ffffffff"
         android:textSize="18sp"/>
