--- a/app/src/main/res/layout/fragment_hourly_weather.xml
+++ b/app/src/main/res/layout/fragment_hourly_weather.xml
@@ -21,6 +21,8 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/todayLabel"/>
+        android:layout_below="@id/todayLabel"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"/>
 
 </RelativeLayout>
